--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           </div>
         
       </div>
-    </section>
+<!--     </section>
 	<footer class="site-footer">
       <div class="container">
         <div class="row mb-3">
@@ -254,7 +254,7 @@
             </p>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
 
 
