--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
           </div>
         
       </div>
-<!--     </section>
-	<footer class="site-footer">
+    </section>
+<!--	<footer class="site-footer">
       <div class="container">
         <div class="row mb-3">
           <div class="col-md-12 text-center">
@@ -248,9 +248,9 @@
         </div>
         <div class="row">
             <p class="col-12 text-center">
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. 
             Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. 
             </p>
         </div>
       </div>
