--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="row intro-text align-items-center justify-content-center">
           <div class="col-md-10 text-center">
             <h1 class="site-heading site-animate">I'm <strong>Ajaysurya</strong></h1>
-            <p class="lead site-subheading mb-4 site-animate">Aspiring engineering graduate who is interested in full stack web development.</p>
+            <p class="lead site-subheading mb-4 site-animate">Aspiring FullStack Developer</p>
             <p><a href="#section-about" class="smoothscroll btn btn-primary px-4 py-3">More On Me</a></p>
           </div>
         </div>
@@ -69,8 +69,8 @@
             <div class="section-heading">
               <h2>About <strong>Me</strong></h2>
             </div>
-            <p class="lead">Full stack web java web developer </p>
-            <p class="mb-5  ">I have a strong in depth knowledge about java and developing websites using spring framework.Iam also interested in data science </p>
+            <p class="lead">Full stack developer </p>
+            <p class="mb-5  ">I have a strong in depth knowledge about java,spring boot and js libraries.Iam also interested in data science </p>
 
             <p>
               <a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
@@ -115,7 +115,7 @@
             </div>
 
             <div class="skill">
-              <h3>Bootstrap</h3>
+              <h3>React.js</h3>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 92%" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100">
                   <span>92%</span>
@@ -193,11 +193,18 @@
             <h2 class="mb-5">Experience</h2>
 
             <div class="resume-item mb-4">
-              <span class="date"><span class="icon-calendar"></span> December 2019 - March 2020</span>
+              <span class="date"><span class="icon-calendar"></span> December 2019 - August 2020</span>
               <h3>Intern</h3>
-              <p>Java full stack internship</p>
+              <p>Java full stack engineer</p>
 			  <span class="school">Cognizant Technology Solutions India Pvt Ltd</span>
             </div>
+		
+		<div class="resume-item mb-4">
+              <span class="date"><span class="icon-calendar"></span> January 2021 - Present</span>
+              <h3>Intern</h3>
+              <p>Assistant System Engineer Trainee</p>
+			  <span class="school">Tata Consultancy Services</span>
+            </div>  
 
            
 
