--- a/index.html
+++ b/index.html
@@ -194,15 +194,15 @@
 
             <div class="resume-item mb-4">
               <span class="date"><span class="icon-calendar"></span> December 2019 - August 2020</span>
-              <h3>Intern</h3>
-              <p>Java full stack engineer</p>
+              <h3>Java full stack engineer</h3>
+              <p>Intern</p>
 			  <span class="school">Cognizant Technology Solutions India Pvt Ltd</span>
             </div>
 		
 		<div class="resume-item mb-4">
               <span class="date"><span class="icon-calendar"></span> January 2021 - Present</span>
-              <h3>Intern</h3>
-              <p>Assistant System Engineer Trainee</p>
+              <h3>Assistant System Engineer Trainee</h3>
+              <p>Full Time</p>
 			  <span class="school">Tata Consultancy Services</span>
             </div>  
 
