--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
              <strong>  <font size = "4" color="white">8489255112</font></strong>
               </li>
 			  <li>
-			  <a href="https://www.linkedin.com/in/ajaysurya-m-72b4b617a/" class="btn btn-primary px-4 py-2 btn-lg-4">LinkedIn</a>
+			  <a href="https://www.linkedin.com/in/ajaysurya8888/" class="btn btn-primary px-4 py-2 btn-lg-4">LinkedIn</a>
 			  </li>
             </ul>
           </div>
