--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <p>
               <a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-              <a href="#section-resume" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+              <a href="#section-resume" class="btn btn-secondary px-4 py-2 btn-sm">Experience</a>
             </p>
           </div>
         </div>
