--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           </div>
 		
              
-	       <center><a href="resume\Resume-Ajaysurya-M (1).pdf" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+	       <center><a href="Ajaysurya resume V.pdf" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
       </div>
     </section>
 
