--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="row intro-text align-items-center justify-content-center">
           <div class="col-md-10 text-center">
             <h1 class="site-heading site-animate">I'm <strong>Ajaysurya</strong></h1>
-            <p class="lead site-subheading mb-4 site-animate">Aspiring FullStack Developer</p>
+            <p class="lead site-subheading mb-4 site-animate">Software engineer - backend </p>
             <p><a href="#section-about" class="smoothscroll btn btn-primary px-4 py-3">More On Me</a></p>
           </div>
         </div>
@@ -70,7 +70,7 @@
               <h2>About <strong>Me</strong></h2>
             </div>
             <p class="lead">Full stack developer </p>
-            <p class="mb-5  ">I have a strong in depth knowledge about java,spring boot and js libraries.Iam also interested in data science </p>
+            <p class="mb-5  ">I have strong indepth knowledge in backend - java , flexible enough to work on any projects based on business requirements </p>
 
             <p>
               <a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
@@ -104,6 +104,17 @@
               </div>
             </div>
 
+<div class="col-md-9">
+            <div class="skill">
+              <h3>AWS</h3>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                  <span>80%</span>
+                </div>
+              </div>
+            </div>
+
+
                 </div>
               </div>
             </div>
@@ -134,7 +145,10 @@
               </span>
   <h3 class="mb-4">Freshchat</h3>
 		<h6> Associated with Freshworks</h6>
-              <p> Focused on security enhancements and security-related development Specialized in Freshchat, a customer-support chat software. Also, playing a key role in ensuring secure communication between customers and support agents</p>
+              <p> Focused on security enhancements and security-related development Specialized in Freshchat, a customer-support chat software. Also, playing a key role in ensuring secure communication between customers and support agents
+		</p>
+		<p>I handled AWS configurations for a secretive microservice using technologies like Lambda, DynamoDB, and API Gateway</p>
+		<p> Worked on sensitive data collection from the postgres database</p>
 
                          <!--<p><a href="#" class="site-link"><i class="icon-chevron-right"></i></a></p>-->
             </div>
